# organise

./: .gitignore  README.md
backend/: .env  Cargo.toml  README.md
backend/migrations/: 20231010120000_create_notes_table.sql
backend/src/: README.md  config.rs  lib.rs  main.rs
backend/src/db/: README.md  connection.rs
backend/src/models/: README.md  calendar.rs  mod.rs  note.rs  todo.rs
backend/src/routes/: README.md  calendar.rs  mod.rs  notes.rs  todo.rs
backend/src/services/: README.md  calendar_service.rs  mod.rs  notes_service.rs  todo_service.rs
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/calendar/: page.tsx
frontend/app/notes/: [noteid].tsx  page.tsx
frontend/app/tasks/: page.tsx
frontend/components/: ErrorToast.tsx  GlobalErrorProvider.tsx  Navbar.tsx  Sidebar.tsx
frontend/components/calendar/: BigCalendar.tsx
frontend/redux/: Provider.tsx  store.ts
frontend/redux/slices/: calendarSlice.ts  notesSlice.ts  tasksSlice.ts
frontend/styles/: globals.css
